--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <div class="container">
         <h1 class="d-flex justify-content-center">Border Radius Previewer</h1>
         <div class="row d-flex justify-content-center">
-            <div class="box border-radius bg-white m-4"></div>
+            <div class="box border-radius bg-info m-4"></div>
         </div>
+        <form>
+            <div class="form-group">
+              <label for="tl-range">Top-left</label>
+              <input type="range" class="form-control-range" id="tl-range" min="0" max="100" value="12">
+            </div>
+            <div class="form-group">
+              <label for="tr-range">Top-right</label>
+              <input type="range" class="form-control-range" id="tr-range" min="0" max="100" value="35">
+            </div>
+            <div class="form-group">
+              <label for="bl-range">Bottom-left</label>
+              <input type="range" class="form-control-range" id="bl-range" min="0" max="100" value="23">
+            </div>
+            <div class="form-group">
+              <label for="br-range">Bottom-right</label>
+              <input type="range" class="form-control-range" id="br-range" min="0" max="100" value="58">
+            </div>
+        </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
