--- a/index.html
+++ b/index.html
@@ -15,24 +15,34 @@
         </div>
         <form>
             <div class="form-group">
-              <label for="tl-range">Top-left</label>
+              <label for="tl-range">border-top-left-radius: 12%</label>
               <input type="range" class="form-control-range" id="tl-range" min="0" max="100" value="12">
             </div>
             <div class="form-group">
-              <label for="tr-range">Top-right</label>
+              <label for="tr-range">border-top-right-radius: 35%</label>
               <input type="range" class="form-control-range" id="tr-range" min="0" max="100" value="35">
             </div>
             <div class="form-group">
-              <label for="bl-range">Bottom-left</label>
+              <label for="bl-range">border-bottom-left-radius: 23%</label>
               <input type="range" class="form-control-range" id="bl-range" min="0" max="100" value="23">
             </div>
             <div class="form-group">
-              <label for="br-range">Bottom-right</label>
+              <label for="br-range">border-bottom-right-radius: 58%</label>
               <input type="range" class="form-control-range" id="br-range" min="0" max="100" value="58">
             </div>
         </form>
+        <div class="d-flex justify-content-between">
+            <div class="form-inline">
+                <div class="form-group">
+                    <label for="outputBorder">border-radius:</label>
+                    <input type="text" class="form-control ml-4" id="outputBorder" value="12% 35% 23% 58%" readonly>
+                </div>
+            </div>
+            <input type="button" id="copy" class="btn btn-info" value="Copy to clipboard" onclick="copy(this)">
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="scripts/main.js"></script>
 </body>
