--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Lights</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="styles/css/style.css">
 </head>
-<body>
-    
+<body class="bg-dark">
+    <h1 class="text-off">CHRISTMAS LIGHTS</h1>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="bulb bulb-1 off col-md-auto"></div>
+            <div class="bulb bulb-2 off col-md-auto"></div>
+            <div class="bulb bulb-3 off col-md-auto"></div>
+            <div class="bulb bulb-4 off col-md-auto"></div>
+            <div class="bulb bulb-5 off col-md-auto"></div>
+            <div class="bulb bulb-6 off col-md-auto"></div>
+            <div class="bulb bulb-7 off col-md-autos"></div>
+        </div>
+        <div class="row justify-content-md-center">
+            <i class="power text-off material-icons">power_settings_new</i>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
