mesmerizing light display

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="text-off">CHRISTMAS LIGHTS</h1>
     <div class="container">
         <div class="row justify-content-md-center">
-            <div class="bulb bulb-1 off col-md-auto"></div>
+            <div class="bulb bulb-1 red col-md-auto"></div>
             <div class="bulb bulb-2 off col-md-auto"></div>
             <div class="bulb bulb-3 off col-md-auto"></div>
             <div class="bulb bulb-4 off col-md-auto"></div>
