add summary pane on the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Cause and Effect</h1>
+    <ul class="summary">
+        
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
