update content by clicking on the name

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <h1>Cause and Effect</h1>
-    <ul class="summary">
-        
-    </ul>
+    <div class="layout">
+        <ul class="summary"></ul>
+        <div class="content">
+            <p class="name"></p>
+            <p class="street"></p>
+            <p class="telephone"></p>
+            <p class="birthday"></p>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
