required event name and date

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Countdown Timer</h1>
         <form>
             <div class="form-inline">
-                <input type="text" class="form-control" name="name">
-                <input type="date" class="form-control" name="date">
+                <input type="text" class="form-control" name="name" required>
+                <input type="date" class="form-control" name="date" required>
                 <input type="time" class="form-control" name="time">
                 <button type="submit" class="btn btn-primary">Start</button>
             </div>
