--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">Countdown Timer</h1>
+        <h1 class="text-center my-4">Countdown Timer</h1>
         <form>
-            <div class="form-inline mb-2">
+            <div class="form-inline my-4">
                 <input type="text" class="form-control mr-2" name="event" required>
                 <input type="date" class="form-control mr-2" name="date" required>
                 <input type="time" class="form-control mr-2" name="time">
@@ -23,6 +23,20 @@
                 </button>
             </div>
         </form>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Event Name</th>
+                        <th>Countdown</th>
+                        <th>Options</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
