--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
     <div class="container">
         <h1 class="text-center my-4">First DB</h1>
         <div class="d-flex flex-row my-2">
-            <button class="btn btn-primary mr-2">Load DB</button>
-            <button class="btn btn-primary mr-2">Query DB</button>
-            <button class="btn btn-primary">Clear DB</button>
+            <button class="load btn btn-primary mr-2">Load DB</button>
+            <button class="query btn btn-primary mr-2">Query DB</button>
+            <button class="clear btn btn-primary">Clear DB</button>
         </div>
-        <div class="alert alert-success my-2" role="alert">
-            This is a success alert—check it out!
+        <div class="notification alert alert-info my-2" role="alert">
+            Nothing is happening here...
         </div>
-        <div class="log overflow-auto">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vulputate est quis ullamcorper euismod. Morbi eget odio nec purus ullamcorper tempus sit amet ac lacus. Pellentesque ac justo sodales, facilisis augue vitae, congue ipsum. Vivamus sodales felis venenatis erat faucibus consectetur. Vivamus ac fringilla mi. Nam pharetra porttitor finibus. Nam arcu turpis, convallis sed enim vitae, tempus dapibus neque. Duis consectetur eu tellus sed molestie. Nulla felis sapien, cursus ac bibendum eget, pharetra venenatis sem. Aliquam vel porttitor tellus. Aliquam mollis hendrerit auctor.
-            <br/><br/>
-            Cras ornare lectus eu eros varius ultrices. Vivamus convallis porttitor rhoncus. In condimentum cursus scelerisque. Fusce lorem mauris, porttitor ut mauris eget, eleifend luctus sapien. Curabitur sit amet mollis orci, sit amet consequat diam. Duis id efficitur erat, at pharetra lorem. Sed in molestie mi. Cras ac lobortis massa, et maximus risus. Aliquam ut mauris non nisi venenatis congue ac quis justo.
-            <br/><br/>
-            Donec dignissim vulputate erat at dignissim. Fusce sodales, eros eget ultrices mattis, ante diam sollicitudin neque, cursus tincidunt tortor ligula ut lacus. Curabitur arcu tortor, egestas id accumsan eu, gravida nec metus. Nam vel ipsum ac risus ullamcorper condimentum. Ut tincidunt varius risus eu volutpat. Pellentesque convallis erat eget dapibus fringilla. Quisque vel ligula non risus sollicitudin euismod eget eget urna.
-            <br/><br/>
-            Mauris placerat leo dui, eu rhoncus nisl rhoncus venenatis. Nam pretium velit ac arcu fermentum ornare. Aenean consequat sem dolor, id elementum arcu ullamcorper aliquam. Integer porttitor, orci ultricies porttitor lacinia, nunc eros semper nibh, id consequat quam tortor quis diam. Cras pretium maximus condimentum. Maecenas egestas vel lacus commodo fermentum. Sed interdum dui diam, id lacinia sem congue a. Duis fringilla dolor id ante hendrerit, eget bibendum ligula vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl nisl, maximus in erat et, vehicula convallis quam. Phasellus ut magna leo. In aliquet neque tortor, sit amet fringilla augue lobortis ut.
-            <br/><br/>
-            Aliquam sagittis diam ut ante pretium, interdum cursus sem ullamcorper. Praesent luctus ligula in convallis malesuada. Pellentesque lobortis sapien nunc, vel euismod ante aliquam at. Etiam pretium at urna ac blandit. Integer ac urna id mauris dapibus maximus quis a quam. Nullam id ante ut ante rutrum imperdiet sed nec arcu. Praesent eleifend, lectus a eleifend tincidunt, mi libero hendrerit quam, ac lacinia mi purus sit amet lacus. Morbi volutpat sem non odio aliquet, et facilisis odio pulvinar. Aliquam erat volutpat. Sed egestas scelerisque eleifend. Duis luctus pretium suscipit. Proin vehicula venenatis eros sit amet varius.
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>User ID</th>
+                    <th>Name</th>
+                    <th>E-mail</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <div class="log overflow-auto border rounded">
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="scripts/customer.js"></script>
     <script src="scripts/script.js"></script>
 </body>
