add button state

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="d-flex flex-row my-2">
             <button class="load btn btn-primary mr-2">Load DB</button>
             <button class="query btn btn-primary mr-2">Query DB</button>
-            <button class="clear btn btn-primary">Clear DB</button>
+            <button class="clear btn btn-primary" disabled>Clear DB</button>
         </div>
         <div class="notification alert alert-info my-2" role="alert">
             Nothing is happening here...
