change some logs

--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@
         <div class="notification alert alert-info my-2" role="alert">
             Nothing is happening here...
         </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>User ID</th>
-                    <th>Name</th>
-                    <th>E-mail</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>User ID</th>
+                        <th>Name</th>
+                        <th>E-mail</th>
+                        <th>Last Order</th>
+                        <th>Total Sales</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
         <div class="log overflow-auto border rounded">
+            <p>Log panel started.</p>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
