created pane with a single image repeated in a 2x2 matrix

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
     <div class="container">
         <h1 class="text-center m-4">Flip Image</h1>
+
+        <div class="row no-gutters">
+            <div class="col-6 scene">
+                <div class="card border-0">
+                    <div class="card-face front"></div>
+                    <div class="card-face back"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
