--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <div class="container">
         <h1 class="text-center m-4">Flip Image</h1>
 
-        <div class="row no-gutters">
+        <form class="form-inline mb-2">
+            <div class="form-group">
+                <label for="url">URL</label>
+                <input type="text" class="form-control mx-2" name="url" id="url" required>
+            </div>
+            <button class="btn btn-primary">Display</button>
+        </form>
+        <div class="alert alert-info" role="alert">
+            Try to input an image url
+        </div>
+        
+        <div class="image row no-gutters">
             <div class="col-6 scene">
                 <div class="card border-0">
                     <div class="card-face front"></div>
@@ -45,41 +56,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="scene">
-            <div class="card">
-                <div class="card-face front">
-                    <img src="https://image.freepik.com/free-photo/decorative-alarm-clock-with-blue-background_23-2147609624.jpg" alt="image">
-                </div>
-                <div class="card-facee back">
-                    <img src="https://image.freepik.com/free-photo/decorative-alarm-clock-with-blue-background_23-2147609624.jpg" alt="image">
-                </div>
-            </div>
-            <button class="btn-flip-left">
-                <svg class="bi bi-arrow-left-short" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M7.854 4.646a.5.5 0 010 .708L5.207 8l2.647 2.646a.5.5 0 01-.708.708l-3-3a.5.5 0 010-.708l3-3a.5.5 0 01.708 0z" clip-rule="evenodd"/>
-                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 01.5-.5h6.5a.5.5 0 010 1H5a.5.5 0 01-.5-.5z" clip-rule="evenodd"/>
-                </svg>
-            </button>
-            <button class="btn-flip-right">
-                <svg class="bi bi-arrow-right-short" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L10.793 8 8.146 5.354a.5.5 0 010-.708z" clip-rule="evenodd"/>
-                    <path fill-rule="evenodd" d="M4 8a.5.5 0 01.5-.5H11a.5.5 0 010 1H4.5A.5.5 0 014 8z" clip-rule="evenodd"/>
-                </svg>
-            </button>
-            <button class="btn-flip-up">
-                <svg class="bi bi-arrow-up-short" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M8 5.5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V6a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
-                    <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 01.708 0l3 3a.5.5 0 01-.708.708L8 5.707 5.354 8.354a.5.5 0 11-.708-.708l3-3z" clip-rule="evenodd"/>
-                </svg>
-            </button>
-            <button class="btn-flip-down">
-                <svg class="bi bi-arrow-down-short" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M4.646 7.646a.5.5 0 01.708 0L8 10.293l2.646-2.647a.5.5 0 01.708.708l-3 3a.5.5 0 01-.708 0l-3-3a.5.5 0 010-.708z" clip-rule="evenodd"/>
-                    <path fill-rule="evenodd" d="M8 4.5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V5a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
-                </svg>
-            </button>
-        </div> -->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
