--- a/index.html
+++ b/index.html
@@ -10,41 +10,12 @@
 <body class="bg-light">
     <div class="container">
         <h1 class="text-center my-4">GitHub Status</h1>
-        <div class="d-flex flex-column border rounded mb-4">
-            <div class="p-2 d-flex justify-content-between border-bottom">
-                <h4>Git Operations</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-            <div class="p-2 d-flex justify-content-between border-bottom">
-                <h4>API Requests</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-            <div class="p-2 d-flex justify-content-between border-bottom">
-                <h4>Webhooks</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-            <div class="p-2 d-flex justify-content-between border-bottom">
-                <h4>Issues, PRs, Projects</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-            <div class="p-2 d-flex justify-content-between border-bottom">
-                <h4>GitHub Actions</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-            <div class="p-2 d-flex justify-content-between border-bottom">
-                <h4>GitHub Packages</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-            <div class="p-2 d-flex justify-content-between">
-                <h4>GitHub Pages</h4>
-                <h4><span class="badge badge-success">Operational</span></h4>
-            </div>
-        </div>
-        
+        <div class="status d-flex flex-column border rounded mb-4"></div>
         <div class="d-flex justify-content-center">
             <button class="btn btn-outline-primary">Get Status</button>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
