--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Hello</h1>
-        <form>
+        <form class="needs-validation" novalidate>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" name="username" id="username">
+                    <input type="text" class="form-control" name="username" id="username" required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password">
+                    <input type="password" class="form-control" name="password" id="password" required>
                 </div>
             </div>
             <button class="btn btn-primary" type="submit">Login</button>
