--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Hello</h1>
-        <form class="needs-validation" novalidate>
+        <form class="needs-validation my-2" novalidate>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="username">Username</label>
@@ -21,11 +21,15 @@
                     <input type="password" class="form-control" name="password" id="password" required>
                 </div>
             </div>
-            <button class="btn btn-primary" type="submit">Login</button>
-            <button class="btn btn-secondary">Logout</button>
+            <button class="login btn btn-primary" type="submit">Login</button>
+            <button class="logout btn btn-secondary" type="button" disabled>Logout</button>
         </form>
+        <div class="alert alert-success" style="display: none;" role="alert">
+            A simple success alert—check it out!
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
