--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IOT Mailbox</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="text-center my-4">IOT Mailbox</h1>
+        <div class="d-flex justify-content-center mb-2">
+            <button class="btn btn-primary">Start Monitoring</button>
+            <button class="btn btn-primary mx-2">Stop Monitoring</button>
+            <button class="btn btn-primary">Reset</button>
+        </div>
+        <div class="alert alert-info" role="alert">
+            Nothing is happening
+        </div>
+        <div class="log overflow-auto border rounded">
+            <p>Log panel started.</p>
+        </div>
+    </div>
+
     <script src="scripts/IOTMailbox.js"></script>
     <script src="scripts/script.js"></script>
 </body>
