add notifications/logs and button state

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <h1 class="text-center my-4">IOT Mailbox</h1>
         <div class="d-flex justify-content-center mb-2">
-            <button class="btn btn-primary">Start Monitoring</button>
-            <button class="btn btn-primary mx-2">Stop Monitoring</button>
-            <button class="btn btn-primary">Reset</button>
+            <button class="start btn btn-primary">Start Monitoring</button>
+            <button class="stop btn btn-primary mx-2" disabled>Stop Monitoring</button>
+            <button class="reset btn btn-primary">Reset</button>
         </div>
-        <div class="alert alert-info" role="alert">
+        <div class="notification alert alert-info" role="alert">
             Nothing is happening
         </div>
         <div class="log overflow-auto border rounded">
@@ -23,6 +23,7 @@
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="scripts/IOTMailbox.js"></script>
     <script src="scripts/script.js"></script>
 </body>
