--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Javascript Validation with Regex</h1>
+    <form>
+        <div>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username">
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="text" name="password" id="password">
+        </div>
+        <button type="submit">Submit</button>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
